# crak_chess

./: .gitignore  Adapter.hs  Board.hs  CHANGELOG.md  ChangeLog.md  LEEME.md  LICENSE.txt  Pieces.hs  README.md  README.org  Squares.hs  VERSION  crak-chess.cabal  main.hs  package.yaml  stack.yaml  update_ver.sh
app/: Adapter.hs  Defs.hs  Engine.hs  IoSearch.hs  Main.hs  SubEngine.hs  Test.hs  Uci.hs  Xboard.hs
docs/: Plan.org  notes.org  plan.txt  squares_encode.ods  urls.txt
src/: .sosrc  Adapter.hs  Board.hs  Defs.hs  Engine.hs  Evaluate.hs  Game.hs  Generator.hs  Guardfile  Main.hs  Moves.hs  MyHash.hs  Parsing.hs  Perft.hs  Pieces.hs  Play.hs  PvTable.hs  Rules.hs  Search.hs  Squares.hs  Utils.hs  Valid.hs
tests/: ManualPerft.hs  ManualSearch.h_  Perft.hs  log_engin2  log_engine  q-board.hs  q-runner.hs  q-squares.hs  q_tests_board.hs  q_tests_pieces.hs  q_tests_squares.hs  u-game.hs  u-gen-king_moves.hs  u-gen-pawn_moves.hs  u-gen-qrbn_moves.hs  u-gen-square_attack.hs  u-generator.hs  u-moves.hs  u-perft.hs  u-pieces.hs  u-play.hs  u-runner.hs  u-squares.hs  u_tests_game.hs  u_tests_generator.hs  u_tests_moves.hs
tests/fixtures/: attacked_spec_bools.txt  attacked_sqs.txt  crakchess_perft5.txt  king_move_inputs.txt  king_move_specs.txt  make_move_input.csv  make_move_inputs.txt  nbrq_move_inputs.txt  nbrq_move_specs.txt  pawn_move-specs.txt  pawn_move-sqs.txt  pawn_move_fens.txt  perft_data.csv  square_attack_fens.txt  u-g-fens.txt
