cabal-version: >= 1.10

name:           crak-chess
version: 0.0.13.8
description:    Please see the README on GitHub at 
  <https://github.com/victaum1/crak-chess#readme>
homepage:       https://github.com/victaum1/crak-chess#readme
bug-reports:    https://github.com/victaum1/crak-chess/issues
author:         Victor Hugo Manotas Garces
maintainer:     victorma31@gmail.com
copyright:      [2020] [Victor Hugo Manotas Garces]
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.org
    LEEME.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/victaum1/crak-chess

library
  exposed-modules:
    Board, Engine, Evaluate, Game, Generator, Moves, Parsing, Pieces, Rules
      , Search, Squares
--      Paths_crak_chess
  hs-source-dirs:
      src
  build-depends:
      base >=4.10 && <5,  containers >=0.6.0.1 && <2
  default-language: Haskell2010

executable crak-chess-exe
  main-is: Main.hs
  other-modules:
   Adapter
  hs-source-dirs:
      app
--  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.10 && <5, readline >=1.0.3.0 && <2 
    , crak-chess
  default-language: Haskell2010

test-suite integral-test
  type: exitcode-stdio-1.0
  main-is: integral_test.hs
  hs-source-dirs:
      tests, app, src
  build-depends:
      base >=4.10 && <5, readline >=1.0.3.0 && <2
      , crak-chess
  default-language: Haskell2010

test-suite u-game
  type: exitcode-stdio-1.0
  main-is: u_tests_game.hs
  hs-source-dirs:
      tests
  build-depends:
      base >=4.10 && <5, HUnit >= 1.5.0.0 && <2
      , crak-chess
  default-language: Haskell2010

test-suite u-moves
  type: exitcode-stdio-1.0
  main-is: u_tests_moves.hs
  hs-source-dirs:
      tests,src
  build-depends:
      base >=4.10 && <5, HUnit >= 1.5.0.0 && <2
      , crak-chess
  default-language: Haskell2010

test-suite u-generator
  type: exitcode-stdio-1.0
  main-is: u_tests_generator.hs
  hs-source-dirs:
      tests,src
  build-depends:
      base >=4.10 && <5, HUnit >= 1.5.0.0 && <2
      , crak-chess, containers >=0.6.0.1 && <2
  default-language: Haskell2010

test-suite q-squares 
  type: exitcode-stdio-1.0
  main-is: q_tests_squares.hs
  hs-source-dirs:
      tests, src
  build-depends:
      base >=4.10 && <5, QuickCheck >= 2.10 && <3
      , crak-chess
  default-language: Haskell2010

test-suite q-pieces
  type: exitcode-stdio-1.0
  main-is: q_tests_pieces.hs
  hs-source-dirs:
      tests, src
  build-depends:
      base >=4.10 && <5, QuickCheck >= 2.10 && <3
      , crak-chess
  default-language: Haskell2010

test-suite q-board 
  type: exitcode-stdio-1.0
  main-is: q_tests_pieces.hs
  hs-source-dirs:
      tests, src
  build-depends:
      base >=4.10 && <5, QuickCheck >= 2.10 && <3
      , crak-chess
  default-language: Haskell2010

